# pdf2html

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  PROJECT_SUMMARY.md  README.md  docker-compose.yml  env.example  example_usage.py  pyproject.toml  requirements.txt  run_api.py  test_parallel_processing.py
.github/workflows/: ci.yml  deploy-production.yml  deploy-staging.yml  deploy.yml
deployment/: check-existing-setup.sh  deploy.sh  docker-compose.production.yml  docker-compose.staging.yml  monitoring.yml  prometheus.yml  setup-server.sh
scripts/: deploy.sh
src/pdf2html_api/: __init__.py  config.py  css_styles.py  html_merge.py  llm.py  main.py  markdown_generator.py  markdown_merge.py  pdf_to_images.py  sample_json_extractor.py  sample_json_generator.py  sample_json_to_html.py
src/pdf2html_api/prompts/: html_to_sample_json.md  html_variables.md  image_to_html.md  image_to_markdown.md  user_prompt.md
src/pdf2html_api/services/: __init__.py  conversion_pipeline.py  css_mode_validator.py  html_generator_factory.py  job_store.py  markdown_generator_factory.py  markdown_page_processor.py  markdown_pipeline.py  page_processor.py  pdf_downloader.py  (+2 more)
tests/: test_api.py  test_conversion_pipeline.py  test_conversion_pipeline_extract_variables.py  test_convert_async.py  test_job_store.py  test_main.py  test_markdown_api.py  test_markdown_merge.py  test_markdown_page_processor.py  test_markdown_pipeline.py  test_page_processor.py  test_page_processor_progress.py  test_parallel_processing.py  test_pdf_downloader.py  test_poll_job.py  test_smoke.py
(+1 files in other folders)
